--- a/dhcp.template
+++ b/dhcp.template
@@ -18,11 +18,11 @@ set vendorclass = option vendor-class-identifier;
 
 option pxe-system-type code 93 = unsigned integer 16;
 
-subnet RELEASE_SUBNET netmask SUBNET_MASK {
-     option routers             GATEWAY;
-     option domain-name-servers DNS;
-     option subnet-mask         SUBNET_MASK;
-     range dynamic-bootp        RELEASE_START RELEASE_END;
+subnet 172.16.0.0 netmask 255.255.255.0 {
+     option routers             172.16.0.1;
+     option domain-name-servers 172.16.0.100;
+     option subnet-mask         255.255.255.0;
+     range dynamic-bootp        172.16.0.200 172.16.0.220;
      default-lease-time         21600;
      max-lease-time             43200;
      next-server                $next_server;
