--- a/kickstart/CensOS-7.3-x86_64-ks.cfg
+++ b/kickstart/CensOS-7.3-x86_64-ks.cfg
@@ -1,3 +1,4 @@
+#Please put the file to /var/lib/cobbler/kickstarts/
 #platform=x86, AMD64, or Intel EM64T
 #version=DEVEL
 # Install OS instead of upgrade
