--- a/dhcp.template
+++ b/dhcp.template
@@ -18,11 +18,11 @@ set vendorclass = option vendor-class-identifier;
 
 option pxe-system-type code 93 = unsigned integer 16;
 
-subnet 172.16.0.0 netmask 255.255.255.0 {
-     option routers             172.16.0.1;
-     option domain-name-servers 172.16.0.100;
-     option subnet-mask         255.255.255.0;
-     range dynamic-bootp        172.16.0.200 172.16.0.220;
+subnet DHCP_NETWORK netmask DHCP_SUBNETMASK {
+     option routers             DHCP_GATEWAY;
+     option domain-name-servers DHCP_DNS;
+     option subnet-mask         DHCP_SUBNETMASK;
+     range dynamic-bootp        DHCP_RELEASE_START DHCP_RELEASE_END;
      default-lease-time         21600;
      max-lease-time             43200;
      next-server                $next_server;
