--- a/kickstart/ks-CentOS-7.4-1708.cfg
+++ b/kickstart/ks-CentOS-7.4-1708.cfg
@@ -1,6 +1,6 @@
 #Please put the file to /var/lib/cobbler/kickstarts/
 #platform=x86, AMD64, or Intel EM64T
-
+#version=DEVEL
 # Install OS instead of upgrade
 install
 # Keyboard layouts
@@ -10,6 +10,7 @@ rootpw --iscrypted $default_password_crypted
 # Use network installation
 #cdrom
 url --url=$tree
+#url --url="http://172.16.0.103/cobbler/ks_mirror/CentOS-7.3-x86_64"
 # System language
 lang en_US
 # Firewall configuration
@@ -24,22 +25,22 @@ selinux --disabled
 skipx
 
 # Network information
+#network --onboot yes --bootproto dhcp --device eth0 --activate
 network --onboot yes --bootproto dhcp --activate
 # Reboot after installation
 reboot
 # System timezone
 timezone Asia/Taipei
-
 # System bootloader configuration
-zerombr 
-clearpart --all --initlabel --drives=sda
-
-part /boot --fstype=ext4 --ondisk=sda --size=500
-part pv.123 --fstype=lvmpv --ondisk=sda --size=20480 --grow
-volgroup vg_01 pv.123
-logvol / --fstype=xfs --grow --size=5120 --vgname=vg_01 --name=lv_root
-logvol /var --fstype=xfs --size=4096 --vgname=vg_01 --name=lv_var
-logvol swap --fstype=swap --size=2048 --vgname=vg_01 --name=lv_swap
+#bootloader --location=mbr
+bootloader --location=mbr --driveorder=vda,sda,hda --append="crashkernel=auto rhgb quiet"
+# Clear the Master Boot Record
+zerombr
+# Partition clearing information
+clearpart --all --drives=sda --initlabel
+# Disk partitioning information
+part / --fstype="ext4" --ondisk=sda --size=10240
+part swap --fstype="swap" --ondisk=sda --size=1024
 
 %packages
 git
@@ -48,8 +49,4 @@ vim
 bind-utils
 wget
 bash-completion
-%end
-
-%post --log=/root/kiskstart-post.log
-echo 'Hello, World!'
 %end
